--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "vercel": "^32.2.1"
+    "vercel": "^32.2.1",
+    "ws": "^8.14.1"
   }
 }
